Rename & restructure some files, remove blue border while selecting suggestion, fix some broken Input tests

--- a/src/Autocomplete/Input/index.module.sass
+++ b/src/Autocomplete/Input/index.module.sass
@@ -1,4 +1,4 @@
-@import '../sass/shared.sass'
+@import '../shared.sass'
 
 .label
     font-weight: bold
@@ -24,7 +24,7 @@
 
 .loading 
     background-color: #ffffff
-    background-image: url("../../assets/spinner.gif")
+    background-image: url("./spinner.gif")
     background-size: 25px 25px
     background-position: right center
     background-repeat: no-repeat
